big refactor; some stuff works ...